@@ -14,10 +14,10 @@
    dyy = dst_clip_y - dst_region_y;
    dxx = dst_clip_x - dst_region_x;
 
-   xp = xpoints + dxx;
-   yp = ypoints + dyy;
-   xapp = xapoints + dxx;
-   yapp = yapoints + dyy;
+   xp = xpoints;// + dxx;
+   yp = ypoints;// + dyy;
+   xapp = xapoints;// + dxx;
+   yapp = yapoints;// + dyy;
    pbuf = buf;
 
    if (src->cache_entry.flags.alpha)
@@ -97,8 +97,8 @@
 	     pbuf = buf;
 	     dptr += dst_w;  dst_clip_w = w;
 	     yp++;  yapp++;
-	     xp = xpoints + dxx;
-	     xapp = xapoints + dxx;
+	     xp = xpoints;// + dxx;
+	     xapp = xapoints;// + dxx;
 	  }
      }
    else
@@ -175,8 +175,8 @@
 
 		  dptr += dst_w;  dst_clip_w = w;
 		  yp++;  yapp++;
-		  xp = xpoints + dxx;
-		  xapp = xapoints + dxx;
+		  xp = xpoints;// + dxx;
+		  xapp = xapoints;// + dxx;
 	       }
 	  }
 	else
@@ -251,8 +251,8 @@
 		  pbuf = buf;
 		  dptr += dst_w;  dst_clip_w = w;
 		  yp++;  yapp++;
-		  xp = xpoints + dxx;
-		  xapp = xapoints + dxx;
+		  xp = xpoints;// + dxx;
+		  xapp = xapoints;// + dxx;
 	       }
 	  }
      }
